# throughline

./: .env.example  .gitignore  ARCHITECTURE.md  FUTURE_SCOPE.md  IMPLEMENTATION_PLAN.md  LICENSE  OPERATIONS.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.db.yml  docker-compose.redis.yml  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6fd15e2631eb_initial_schema.py  8cc06631f220_add_confidence_to_episode_speakers.py  a66500b37563_add_chunks_episode_id_and_parent_id_.py  f637d4cd5c8d_add_cascade_delete_to_chunks_parent_id_.py
backend/scripts/: bootstrap.sh  create_test_db.py
backend/src/: config.py  worker.py
backend/src/api/: dependencies.py  main.py
backend/src/ingestion/: audio_downloader.py  chunker.py  embedder.py  feed_service.py  html.py  itunes.py  pipeline.py  pipeline_runner.py  queue.py  rss_parser.py  speaker_resolver.py  speaker_store.py  status_service.py  transcript_store.py
backend/src/llm/: base.py  client.py
backend/src/models/: db.py  schemas.py
backend/src/query/: engine.py  prompt_builder.py  result_hydrator.py  retriever.py  session_store.py  tool_dispatcher.py  tools.py
backend/src/shared/: db.py  jobs.py  llm.py
backend/src/storage/: vector_store.py
backend/src/telemetry/: setup.py  tracer.py
backend/src/transcription/: base.py  local.py  remote.py  transcript_fetcher.py
backend/tests/: conftest.py
backend/tests/fixtures/: sample_feed.xml  sample_transcript.json
backend/tests/integration/: conftest.py  test_feeds.py  test_ingestion_pipeline.py  test_queue.py  test_speakers.py
backend/tests/unit/: test_auth_middleware.py  test_background_queue.py  test_chunker.py  test_engine.py  test_itunes.py  test_prompt_builder.py  test_queue.py  test_result_hydrator.py  test_retriever.py  test_rss_parser.py  test_schemas.py  (+2 more)
experiments/diarization/: .gitignore  README.md  bench_mlx_qwen3_asr_only.py  bench_mlx_whisper.py  bench_modal_pyannote.py  bench_pyannote.py  bench_senko.py  bench_sortformer.py  convert_audio.py  main.py  pyproject.toml
(+52 files in other folders)
