[project]
name = "backend"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "faster-whisper>=1.2.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "mlx-whisper>=0.4.3",
    "openai>=2.38.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pyannote-audio>=4.0.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.50",
    "sse-starlette>=3.4.4",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "uvicorn[standard]>=0.48.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
]
